--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@
 
 /* About Section Hover Effect */
 .objectives {
-    width: 95vw;
+    width: 75vw;
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     border: solid transparent;
@@ -93,7 +93,8 @@
 /* Contact Section */
 .contact-container {
     width: 100%;
-    height: 100vh;
+    max-width: 500px;
+    height: fit-content;
     background: white;
     padding: 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
@@ -103,6 +104,17 @@
     margin-top: 40px;
 }
 
+.fa-solid{
+    margin-right: 3px;
+}
+
+.section4{
+    background: white;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-content: center;
+}
 .btn-send {
     background-color: #4CAF50;
     max-width: 200px;
@@ -116,4 +128,7 @@
 
 .btn-send:hover {
     background-color: #45a049;
+}
+#resume{
+    margin-bottom: 10px;
 }
